tidy up code